# Pendulum-Simulation

./: .gitignore  NEAT.py  README.md  Readme.md  environment.py  game_pendulum.py  pyproject.toml  reporter.py  requirements.txt
Experimental MatPlotlib/: interactivePlots.py  interactiveV2.py  stationaryPlots.py
OpenAIGym/: CartPole.py  Simulation_OOP.py  sim_hml.py  test.py
graphics/: Cart2.png~
models/: neat-checkpoint-1  neat-checkpoint-3  neat-checkpoint-5  neat-checkpoint-7  neat-checkpoint-9
src/neat_model/: NEAT.py  config_pendulum  neat-tests.py
src/openAIGym/: Simulation_OOP.py  gym-tests.py  model.py  simulation_copy.py
src/pendulum_engine/: environment.py  pendulum.py  reporter.py
test_programs/: pendulum_test.py
